--- a/deploy.yml
+++ b/deploy.yml
@@ -34,7 +34,7 @@ spec:
 
       - name: demo
 
-        image: nginx:latest
+        image: 771070158678.dkr.ecr.us-east-1.amazonaws.com/demo:demo-project-ChangebuildNumber
 
         ports:
 
